# pongc

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  pongc
docs/: README.txt
include/: ball.h  client.h  config.h  game.h  random.h  server.h  shaders.h  shared.h  signals.h  utils.h
scripts/: install.bat  install.sh  uninstall.bat  uninstall.sh
src/: ball.c  client.c  game.c  main.c  server.c  shaders.c  signals.c  utils.c
